# advent-of-code-2023

./: .gitignore  advent-of-code-2023.cabal
day1/: day1.cabal
day1/app/: day1-1.hs  day1-2.hs
day2/: day2-1.hs  day2-2.hs  day2.cabal
day2/app/: day2-1.hs
day3/: day3-1.hs  day3-2.hs  day3.cabal
day4/: day4-2.hs  day4.cabal
day4/app/: day4-1.hs
day5/: day5-1.hs  day5-2.hs  day5.cabal
day6/: day6-1.hs  day6-2.hs  day6.cabal
day7/: day7-1.hs  day7-2.hs
day8/: day8-1.hs  day8-2.hs
day9/: day9-1.hs  day9-2.hs
