cabal-version:      2.4
name:               AdventOfCode2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Tobias Linton
maintainer:         tobias.linton@edgeware.tv

-- A copyright notice.
-- copyright:
-- category:
executable day8-1
    main-is:          day8-1.hs
    build-depends:    base ^>=4.16.3.0, containers, regex-compat
    hs-source-dirs:   day8
    default-language: Haskell2010

executable day7-2
    main-is:          day7-2.hs
    build-depends:    base ^>=4.16.3.0, containers
    hs-source-dirs:   day7
    default-language: Haskell2010

executable day7-1
    main-is:          day7-1.hs
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   day7
    default-language: Haskell2010

executable day6-2
    main-is:          day6-2.hs
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   day6
    default-language: Haskell2010

executable day6-1
    main-is:          day6-1.hs
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   day6
    default-language: Haskell2010

executable day5-2
    main-is:          day5-2.hs
    build-depends:    base ^>=4.16.3.0, split
    hs-source-dirs:   day5
    default-language: Haskell2010

executable day5-1
    main-is:          day5-1.hs
    build-depends:    base ^>=4.16.3.0, split
    hs-source-dirs:   day5
    default-language: Haskell2010

executable day4-2
    main-is:          day4-2.hs
    build-depends:    base ^>=4.16.3.0, split
    hs-source-dirs:   day4
    default-language: Haskell2010

executable day4-1
    main-is:          day4-1.hs
    build-depends:    base ^>=4.16.3.0, split
    hs-source-dirs:   day4
    default-language: Haskell2010

executable day3-2
    main-is:          day3-2.hs
    build-depends:    base ^>=4.16.3.0, containers
    hs-source-dirs:   day3
    default-language: Haskell2010

executable day3-1
    main-is:          day3-1.hs
    build-depends:    base ^>=4.16.3.0, containers
    hs-source-dirs:   day3
    default-language: Haskell2010

executable day2-2
    main-is:          day2-2.hs
    build-depends:    base ^>=4.16.3.0, split
    hs-source-dirs:   day2
    default-language: Haskell2010

executable day2-1
    main-is:          day2-1.hs
    build-depends:    base ^>=4.16.3.0, split
    hs-source-dirs:   day2
    default-language: Haskell2010

executable day1-2
    main-is:          day1-2.hs
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   day1
    default-language: Haskell2010

executable day1-1
    main-is:          day1-1.hs
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   day1
    default-language: Haskell2010
