cabal-version:      2.4
name:               day1
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Tobias Linton
maintainer:         tobias.linton@edgeware.tv

-- A copyright notice.
-- copyright:
-- category:
executable day1-1
    main-is:          day1-1.hs
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable day1-2
    main-is:          day1-2.hs
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
